<resources>
    <string name="app_name" translatable="false">CovidSafe</string>
    <string name="retry">Thử lại</string>
    <string name="date_picker">Chọn ngày</string>
    <string name="login_title">Đăng nhập</string>
    <string name="login_phone_number">Số điện thoại</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_forgot_password">Quên mật khẩu?</string>
    <string name="login_fingerprint">Đăng nhập bằng vân tay</string>
    <string name="login_fingerprint_detail">Đăng nhập bằng thông tin xác thực sinh trắc học của bạn</string>
    <string name="login_you_don_not_have_account">Bạn chưa có tài khoản?</string>
    <string name="login_register_now">Đăng ký ngay</string>
    <string name="register_title">Đăng ký</string>
    <string name="register_phone_number">Số điện thoại</string>
    <string name="register_password">Mật khẩu</string>
    <string name="register_terms_and_conditions"><font color='#FFFF0000'>*</font> Vui lòng cung cấp thông tin chính xác để đảm bảo công tác phòng chống dịch Covid-19 và nhận chứng nhận tiêm chủng</string>
    <string name="verification_title">Xác thực số điện thoại</string>
    <string name="verification_please_enter_the_verification_code_sent_to_number">Vui lòng nhập mã xác thực gửi đến số</string>
    <string name="verification_otp_is_valid_for">Mã xác thực hiệu lực: %s</string>
    <string name="verification_activation_code_is_expired">Mã kích hoạt đã hết hiệu lực!</string>
    <string name="verification_resend_code">Gửi lại mã</string>
    <string name="verification_enter_otp_code_hint">Nhập mã OTP</string>
    <string name="verification_otp_code">Mã OTP</string>
    <string name="profile_title">Thông tin cá nhân</string>
    <string name="profile_full_name">Họ và tên<font color='#FFFF0000'>*</font></string>
    <string name="profile_date_of_birth">Ngày tháng năm sinh<font color='#FFFF0000'>*</font></string>
    <string name="profile_gender">Giới tính<font color='#FFFF0000'>*</font></string>
    <string name="profile_male">Nam</string>
    <string name="profile_female">Nữ</string>
    <string name="profile_phone_number">Số điện thoại<font color='#FFFF0000'>*</font></string>
    <string name="profile_identification">CMND/CCCD/Hộ chiếu<font color='#FFFF0000'>*</font></string>
    <string name="profile_email">Email</string>
    <string name="profile_province">Tỉnh/Thành phố<font color='#FFFF0000'>*</font></string>
    <string name="profile_district">Quận/Huyện<font color='#FFFF0000'>*</font></string>
    <string name="profile_ward">Xã/Phường<font color='#FFFF0000'>*</font></string>
    <string name="profile_address">Địa chỉ hiện tại</string>
    <string name="profile_health_insurance_number">Số thẻ BHYT</string>
    <string name="profile_nationality">Quốc tịch</string>
    <string name="profile_ethnic">Dân tộc</string>
    <string name="profile_religion">Tôn giáo</string>
    <string name="profile_occupation">Nghề nghiệp</string>
    <string name="vaccine_registration_title">Hồ sơ tiêm chủng COVID-19</string>
    <string name="vaccine_registration_covid19_vaccination">Tiêm chủng COVID-19</string>
    <string name="vaccine_registration_date_of_birth">Ngày sinh</string>
    <string name="vaccine_registration_list">Danh sách đăng ký tiêm COVID-19 ( %s )</string>
    <string name="item_vaccine_registration_month_year">%s/%s</string>
    <string name="item_vaccine_registration_hours_minutes_seconds">%s:%s:%s</string>
    <string name="add_vaccine_registration_title">Đăng ký tiêm vaccine</string>
    <string name="add_vaccine_registration_full_name">Họ và tên<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_date_of_birth">Ngày tháng năm sinh<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_gender">Giới tính<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_male">Nam</string>
    <string name="add_vaccine_registration_female">Nữ</string>
    <string name="add_vaccine_registration_identification">CMND/CCCD/Hộ chiếu<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_health_insurance_number">Số thẻ BHYT</string>
    <string name="add_vaccine_registration_preferred_vaccination_date">Thời gian mong muốn tiêm</string>
    <string name="add_vaccine_registration_occupation">Nghề nghiệp<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_priority_group">Đối tượng<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_province">Tỉnh/Thành phố<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_district">Quận/Huyện<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_ward">Xã/Phường<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_address">Địa chỉ hiện tại</string>
    <string name="add_vaccine_registration_ethnic">Dân tộc<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_nationality">Quốc tịch<font color='#FFFF0000'>*</font></string>
    <string name="add_vaccine_registration_medical_history">Tiền sử bệnh</string>
    <string name="add_vaccine_registration_yes">Có</string>
    <string name="add_vaccine_registration_no">Không</string>
    <string name="add_vaccine_registration_undefined">Không rõ</string>
    <string name="add_vaccine_registration_symptom">Triệu chứng</string>
    <string name="add_vaccine_registration_anaphylaxis">1. Tiền sử phản vệ từ độ 2 trở lên</string>
    <string name="add_vaccine_registration_covid19">2. Tiền sử bị COVID-19 trong vòng 6 tháng</string>
    <string name="add_vaccine_registration_other_vaccinations">3. Tiền sử tiêm vắc xin khác trong 14 ngày qua</string>
    <string name="add_vaccine_registration_cancer">4. Tiền sử suy giảm miễn dịch, ung thư giai đoạn cuối, cắt lách, xơ gan mất bù ...</string>
    <string name="add_vaccine_registration_taking_medicine">5. Đang dùng thuốc ức chế miễn dịch, corticoid liều ca (tương đương hoặc hơn 2mg prednisolon/kg/ngày trong ít nhất 7 ngày) hoặc điều trị hóa trị, xạ trị</string>
    <string name="add_vaccine_registration_acute_illness">6. Bệnh cấp tính</string>
    <string name="add_vaccine_registration_chronic_progressive_disease">7. Tiền sử bệnh mạn tính, đang tiến triển</string>
    <string name="add_vaccine_registration_chronic_treated_well">8. Tiền sử bệnh mạn tính đã điều trị ổn</string>
    <string name="add_vaccine_registration_pregnant">9. Đang mang thai, phụ nữ đang nuôi con bằng sữa mẹ</string>
    <string name="add_vaccine_registration_more_than_65">10. Độ tuổi: ≥65 tuổi</string>
    <string name="add_vaccine_registration_coagulation">11. Tiền sử rối loạn đông máu/cầm máu hoặc đang dùng thuốc chống đông</string>
    <string name="add_vaccine_registration_allergy">12. Tiền sử dị ứng với các dị nguyên khác</string>
    <string name="add_vaccine_registration_agree_form">Phiếu đồng ý tiêm</string>
    <string name="add_vaccine_registration_condition1">1. Tiêm chủng vắc xin là biện pháp phòng chống dịch hiệu quả, tuy nhiên vắc xin phòng COVID-19 có thể không phòng được bệnh hoàn toàn. Người được tiêm chủng vắc xin phòng COVID-19 có thể phòng được bệnh hoặc giảm mức độ nặng nếu mắc bệnh. Tuy nhiên, sau khi tiêm chủng vẫn phải tiếp tục thực hiện nghiêm các biện pháp phòng chống dịch theo quy định.</string>
    <string name="add_vaccine_registration_condition2">2. Tiêm chủng vắc xin phòng COVID-19 có thể gây ra một số biểu hiện tại chỗ tiêm hoặc toàn thân như sưng, đau chỗ tiêm, nhức đầu, buồn nôn, sốt, đau cơ…hoặc tai biến nặng sau tiêm chủng. Tiêm vắc xin mũi 2 do Pfizer sản xuất ở người đã tiêm mũi 1 bằng vắc xin AstraZeneca có thể tăng khả năng xảy ra phản ứng thông thường sau tiêm chủng.</string>
    <string name="add_vaccine_registration_condition3">3. Khi có triệu chứng bất thường về sức khỏe, người được tiêm chủng cần đến ngay cơ sở y tế gần nhất để được tư vấn, thăm khám và điều trị kịp thời.</string>
    <string name="add_vaccine_registration_after_reading">Sau khi đã đọc các thông tin nêu trên, tôi đã hiểu về các nguy cơ và: </string>
    <string name="add_vaccine_registration_agree">Đồng ý tiêm chủng</string>
    <string name="vaccine_registration_detail_title">Thông tin đăng ký tiêm</string>
    <string name="vaccine_registration_detail_qrcode">(Mã QRCode dùng để khai báo khi tiêm vaccine)</string>
    <string name="vaccine_registration_detail_created_time">%s/%s/%s %s:%s:%s</string>
    <string name="vaccine_registration_detail_full_name">Họ và tên<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_date_of_birth">Ngày tháng năm sinh<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_gender">Giới tính<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_male">Nam</string>
    <string name="vaccine_registration_detail_female">Nữ</string>
    <string name="vaccine_registration_detail_identification">CMND/CCCD/Hộ chiếu<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_health_insurance_number">Số thẻ BHYT</string>
    <string name="vaccine_registration_detail_preferred_vaccination_date">Thời gian mong muốn tiêm</string>
    <string name="vaccine_registration_detail_occupation">Nghề nghiệp<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_priority_group">Đối tượng<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_province">Tỉnh/Thành phố<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_district">Quận/Huyện<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_ward">Xã/Phường<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_address">Địa chỉ hiện tại</string>
    <string name="vaccine_registration_detail_ethnic">Dân tộc<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_nationality">Quốc tịch<font color='#FFFF0000'>*</font></string>
    <string name="vaccine_registration_detail_medical_history">Tiền sử bệnh</string>
    <string name="vaccine_registration_detail_yes">Có</string>
    <string name="vaccine_registration_detail_no">Không</string>
    <string name="vaccine_registration_detail_undefined">Không rõ</string>
    <string name="vaccine_registration_detail_symptom">Triệu chứng</string>
    <string name="vaccine_registration_detail_anaphylaxis">1. Tiền sử phản vệ từ độ 2 trở lên</string>
    <string name="vaccine_registration_detail_covid19">2. Tiền sử bị COVID-19 trong vòng 6 tháng</string>
    <string name="vaccine_registration_detail_other_vaccinations">3. Tiền sử tiêm vắc xin khác trong 14 ngày qua</string>
    <string name="vaccine_registration_detail_cancer">4. Tiền sử suy giảm miễn dịch, ung thư giai đoạn cuối, cắt lách, xơ gan mất bù ...</string>
    <string name="health_declaration_title">Khai báo y tế</string>
    <string name="health_declaration_detail_title">Chi tiết khai báo y tế</string>
    <string name="report_title">Phản ánh</string>
    <string name="add_report_title">Gửi phản ánh</string>
    <string name="report_detail_title">Chi tiết phản ánh</string>
    <string name="vaccination_title">Thông tin tiêm vaccine</string>
    <string name="vaccination_detail_title">Thông tin tiêm vaccine</string>
    <string name="hint_enter_password">Nhập mật khẩu</string>
    <string name="hint_enter_content">Nhập nội dung</string>
    <string name="button_login">Đăng nhập</string>
    <string name="button_ok">Xác nhận</string>
    <string name="button_cancel">Huỷ bỏ</string>
    <string name="home_title">Trang chủ</string>
    <string name="account_title">Tài khoản</string>
</resources>