<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.android.covidsafe.ui.main.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="ShowBottomNav"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_home_fragment_to_vaccine_registration_fragment"
            app:destination="@id/vaccine_registration_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_report_fragment"
            app:destination="@id/report_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_health_declaration_fragment"
            app:destination="@id/health_declaration_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_vaccination_fragment"
            app:destination="@id/vaccination_fragment" />
    </fragment>

    <fragment
        android:id="@+id/account_fragment"
        android:name="com.android.covidsafe.ui.main.account.AccountFragment"
        android:label="@string/account_title"
        tools:layout="@layout/fragment_account">
        <argument
            android:name="ShowBottomNav"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_account_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />
    </fragment>

    <fragment
        android:id="@+id/vaccine_registration_fragment"
        android:name="com.android.covidsafe.ui.main.home.vaccineregistration.VaccineRegistrationFragment"
        android:label="@string/vaccine_registration_title"
        tools:layout="@layout/fragment_vaccine_registration">

        <action
            android:id="@+id/action_vaccine_registration_fragment_to_vaccine_registration_detail_fragment"
            app:destination="@id/vaccine_registration_detail_fragment" />

        <action
            android:id="@+id/action_vaccine_registration_fragment_to_add_vaccine_registration_fragment"
            app:destination="@id/add_vaccine_registration_fragment" />
    </fragment>

    <fragment
        android:id="@+id/vaccine_registration_detail_fragment"
        android:name="com.android.covidsafe.ui.main.home.vaccineregistration.detail.VaccineRegistrationDetailFragment"
        android:label="@string/vaccine_registration_detail_title"
        tools:layout="@layout/fragment_vaccine_registration_detail" />

    <fragment
        android:id="@+id/add_vaccine_registration_fragment"
        android:name="com.android.covidsafe.ui.main.home.vaccineregistration.add.AddVaccineRegistrationFragment"
        android:label="@string/add_vaccine_registration_title"
        tools:layout="@layout/fragment_add_vaccine_registration">

        <action
            android:id="@+id/action_add_vaccine_registration_fragment_to_vaccine_registration_fragment"
            app:destination="@id/vaccine_registration_fragment"
            app:popUpTo="@+id/vaccine_registration_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.android.covidsafe.ui.main.account.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/health_declaration_fragment"
        android:name="com.android.covidsafe.ui.main.home.healthdeclaration.HealthDeclarationFragment"
        android:label="@string/health_declaration_title"
        tools:layout="@layout/fragment_health_declaration">
        <action
            android:id="@+id/action_health_declaration_fragment_to_add_health_declaration_fragment"
            app:destination="@id/add_health_declaration_fragment" />
        <action
            android:id="@+id/action_health_declaration_fragment_to_health_declaration_detail_fragment"
            app:destination="@id/health_declaration_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/add_health_declaration_fragment"
        android:name="com.android.covidsafe.ui.main.home.healthdeclaration.add.AddHealthDeclarationFragment"
        android:label="@string/add_vaccine_registration_title"
        tools:layout="@layout/fragment_add_health_declaration">
        <action
            android:id="@+id/action_add_health_declaration_fragment_to_health_declaration_fragment"
            app:destination="@id/health_declaration_fragment"
            app:popUpTo="@+id/health_declaration_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/health_declaration_detail_fragment"
        android:name="com.android.covidsafe.ui.main.home.healthdeclaration.detail.HealthDeclarationDetailFragment"
        android:label="@string/health_declaration_detail_title"
        tools:layout="@layout/fragment_health_declaration_detail" />
    <fragment
        android:id="@+id/report_fragment"
        android:name="com.android.covidsafe.ui.main.home.report.ReportFragment"
        android:label="@string/report_title"
        tools:layout="@layout/fragment_report">
        <action
            android:id="@+id/action_report_fragment_to_add_report_fragment"
            app:destination="@id/add_report_fragment" />
        <action
            android:id="@+id/action_report_fragment_to_report_detail_fragment"
            app:destination="@id/report_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/add_report_fragment"
        android:name="com.android.covidsafe.ui.main.home.report.add.AddReportFragment"
        android:label="@string/add_report_title"
        tools:layout="@layout/fragment_add_report">
        <action
            android:id="@+id/action_add_report_fragment_to_report_fragment"
            app:destination="@id/report_fragment"
            app:popUpTo="@+id/report_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/report_detail_fragment"
        android:name="com.android.covidsafe.ui.main.home.report.detail.ReportDetailFragment"
        android:label="@string/report_detail_title"
        tools:layout="@layout/fragment_report_detail" />
    <fragment
        android:id="@+id/vaccination_fragment"
        android:name="com.android.covidsafe.ui.main.home.vaccination.VaccinationFragment"
        android:label="@string/vaccination_title"
        tools:layout="@layout/fragment_vaccination" >
        <action
            android:id="@+id/action_vaccination_fragment_to_vaccination_detail_fragment"
            app:destination="@id/vaccination_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/vaccination_detail_fragment"
        android:name="com.android.covidsafe.ui.main.home.vaccination.detail.VaccinationDetailFragment"
        android:label="@string/vaccination_detail_title"
        tools:layout="@layout/fragment_vaccination_detail"/>


</navigation>