<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.android.covidsafe.ui.auth.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_blue"
        android:orientation="vertical"
        tools:context=".ui.auth.login.LoginFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_image_extra_large"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:src="@drawable/covid_safe_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_radius_background"
            android:elevation="36dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_large"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_title"
                    android:textAppearance="?attr/textAppearanceDisplaySmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login_phone_number"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/radius_default"
                    app:boxCornerRadiusBottomStart="@dimen/radius_default"
                    app:boxCornerRadiusTopEnd="@dimen/radius_default"
                    app:boxCornerRadiusTopStart="@dimen/radius_default"
                    app:counterEnabled="@{loginViewModel.username.length() > 0}"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_people"
                    app:startIconTint="?attr/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/it_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_enter_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:text="@={loginViewModel.username}"
                        android:textAppearance="?attr/textAppearanceBodyMedium" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login_password"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/radius_default"
                    app:boxCornerRadiusBottomStart="@dimen/radius_default"
                    app:boxCornerRadiusTopEnd="@dimen/radius_default"
                    app:boxCornerRadiusTopStart="@dimen/radius_default"
                    app:counterEnabled="@{loginViewModel.password.length() > 0}"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="?attr/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/it_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_enter_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:text="@={loginViewModel.password}"
                        android:textAppearance="?attr/textAppearanceBodyMedium" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/login_forgot_password"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?attr/colorPrimary" />

                <Button
                    android:id="@+id/btn_login_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_button_default"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/button_login"
                    android:textAppearance="?attr/textAppearanceButton" />

                <TextView
                    android:id="@+id/tv_login_fingerprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:drawablePadding="@dimen/padding_medium"
                    android:text="@string/login_fingerprint"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:drawableStartCompat="@drawable/ic_fingerprint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_large"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_you_don_not_have_account"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

                <TextView
                    android:id="@+id/tv_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/login_register_now"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?attr/colorPrimary" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>

